/*
 * $Id: ChangeLog,v 1.2947 2004/05/17 14:20:18 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-17 23:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * source/rtl/teditor.prg
     * replaced ReadInsert with SET( _SET_INSERT ) to avoid "implicit"
       inclusion of getsys.prg.

2004-05-17 16:15 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * include/thread.h
   * source/vm/thread.c
     * simplified OS/2 thread support. doesn't use Terekhov algorithm anymore, solved all
       identified problems up to now. Talks with Giancarlo Niccolai let me suppose there still could
       be something to do, we will see... :)
   * utils/hbtest/rt_ccall.prg
     ! fixed to compile when HB_LONG_LONG_OFF is defined. Fix provided by Przemyslaw Czerpak.

2004-05-17 15:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Fixed an error in EXIT procedures when exiting the debugger via Alt-X.

2004-05-17 13:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! A hack to enforce normal cursor setting in code window.

2004-05-16 23:10 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/philes.c
    * Reverted last commit for Cl*pper compatibility

2004-05-16 21:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    ! Fixed compilation of <BEGIN SEQUENCE, END> when no RECOVER USING is used.
    ! Fixed compilation of <TRY, END> when no CATCH is used.
    ! Fixed management of <FOR EACH, NEXT> in BREAK context.

2004-05-16 21:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/philes.c
    * FREADSTR was loosing the rest of the buffer when it have a CHR(0)
  * include/fileio.ch
    * Minor typo fix in comment

2004-05-16 18:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvm.h
  * include/thread.h